--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         padding: 5px;
       }
       tr:nth-child(1) {
-        background-color: #58ad49;
+        background-color: #55e73c;
         border: 1px solid o#193914;
       }
       tr.organisations:nth-child(1) {
@@ -69,6 +69,9 @@
       color: #6b3b27;
       text-decoration: none;
       }
+      .leaflet-popup-content {
+      max-width: 200px;
+  }
     </style>
   </head>
   <body>
