--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Cape Town Cyclist Map</title>
-    <link rel="icon" type="image/x-icon" href="AMF_Logo.png">
+    <link rel="icon" type="image/x-icon" href="img/AMF_Logo.png">
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
