--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       var organisations = [
         {
-          img: "img/1.png",
+          img: "img/C1.png",
           coordinates: [-33.92898, 18.445676],
           name: "Ciovita",
           cyclistsCount: 12,
