Joburg Groups roughly added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,46 @@
           address: "https://www.ciovita.co.za",
         },
         {
+          coordinates: [-32.978843, 27.902677],
+          name: "The 4Room House",
+          cyclistsCount: 15,
+          genre: "Social Cycle Group",
+          representative: "Roommate 1",
+          address: ".",
+        },
+         {
+          coordinates: [-26.193, 28.037586],
+          name: "Street Friends",
+          cyclistsCount: 120,
+          genre: "Social Cycle Group",
+          representative: "Street Friend 1",
+          address: ".",
+        },
+         {
+          coordinates: [-26.0993022, 28.1098620],
+          name: "Alexandra Bike Club",
+          cyclistsCount: 192,
+          genre: "Social Cycle Group",
+          representative: "Chef 1",
+          address: ".",
+        },
+        {
+          coordinates: [-26.1238508, 28.0194909],
+          name: "Bicycle Stokvel",
+          cyclistsCount: 2842,
+          genre: "Social Cycle Group",
+          representative: "Contributor 1",
+          address: ".",
+        },
+         {
+          coordinates: [-26.19479618, 28.0344103],
+          name: "Banditz Bicycle Club",
+          cyclistsCount: 200,
+          genre: "Social Cycle Group",
+          representative: "Banddit No.1",
+          address: ".",
+        },
+          {
           coordinates: [-33.969671, 18.474231],
           name: "TKLA x CCNIA",
           cyclistsCount: 3,
@@ -210,7 +250,7 @@
       );
 
       const maxRadius = 350;
-      const minRadius = 30;
+      const minRadius = 40;
 
       const calculateRadius = (
         maxNumber,
