First set of logos

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
           address: "https://www.tk-la.co.za",
         },
         {
+          img: "img/KC.png",
           coordinates: [-34.03538681835805, 18.658927740543284],
           name: "Khaltsha Cycles",
           cyclistsCount: 130,
@@ -190,16 +191,8 @@
           contact: "0845512053",
           address: "https://www.khaltshacycles.co.za",
         },
-                {
-          coordinates: [-33.96398083669696, 18.4695883714251],
-          name: "Boys for Abundance",
-          cyclistsCount: 8,
-          genre: "Social Cycle Group",
-          representative: "Zamindlela Mkhwanazi",
-          contact: "0791277461",
-          address: "",
-        },
         {
+          img: "img/ECC.png",
           coordinates: [-33.928135, 18.423820],
           name: "East City Cycles",
           cyclistsCount: 465,
@@ -208,6 +201,7 @@
           address: "https://www.eastcitycycles.com",
         },
         {
+          img: "img/RC.png",
           coordinates: [-33.9238, 18.41520],
           name: "Rook Cycles",
           cyclistsCount: 113,
@@ -224,6 +218,7 @@
           address: "https://www.instagram.com/mother_amateur_bicycling_club",
         },
         {
+          img: "img/TA.png",
           coordinates: [-33.99713886723101, 18.45176222264877],
           name: "Trail Angels",
           cyclistsCount: 141,
@@ -232,6 +227,7 @@
           address: "https://www.trailangels.co.za",
         },
         {
+          img: "img/LBH.png",
           coordinates: [-33.94818370463969, 18.52277421724254],
           name: "Langa Bicycle Hub",
           cyclistsCount: 210,
