Contact for groups excluded

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ organisations.forEach((organisation) => {
           <tr><th>Group Genre</th><td>${org.genre}</td></tr>
           <tr><th>Number of People</th><td>${org.cyclistsCount}</td></tr>
           <tr><th>Representative</th><td>${org.representative}</td></tr>
-          <tr><th>Contact</th><td>${org.contact}</td></tr>
+//           <tr><th>Contact</th><td>${org.contact}</td></tr>
           <tr><th></th><td><div class=\"brown\"><a href="${org.address}/ target=_blank">Website</a></td></tr>
         </table>
       `;
