Girls on Bikes added

--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
           address: ".",
         },
          {
+          img: "img/GOB.png",
+          coordinates: [-26.194997, 28.034471],
+          name: "Girls on Bikes",
+          cyclistsCount: 363,
+          genre: "Social Cycle Group",
+          representative: "Contributor 1",
+          address: ".",
+        },
+         {
           img: "img/BB.png",
           coordinates: [-26.19479618, 28.0344103],
           name: "Banditz Bicycle Club",
