Updating Ciovita website

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           cyclistsCount: 12,
           genre: "Cycling Club",
           representative: "Charl Neethling",
-          address: "https://www.ciovita.co.za",
+          address: "https://ciovita.co.za/",
         },
         {
           img: "img/4R.png",
